--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -72,6 +72,8 @@ dependencies {
     implementation('com.squareup.retrofit2:retrofit:2.9.0')
     implementation( 'com.squareup.retrofit2:converter-gson:2.9.0')
     implementation('com.squareup.retrofit2:converter-scalars:2.9.0')
+
+    implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
 
     implementation("io.coil-kt:coil-compose:2.4.0")
 }
